--- a/package.json
+++ b/package.json
@@ -13,53 +13,30 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/datetimepicker": "^8.3.0",
-    "@react-native-firebase/app": "^21.12.0",
-    "@react-native-firebase/auth": "^21.12.0",
-    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "axios": "^1.8.2",
-    "date-fns": "^4.1.0",
-    "expo": "~52.0.37",
-    "expo-auth-session": "^6.0.3",
-    "expo-blur": "~14.0.3",
-    "expo-build-properties": "^0.13.2",
-    "expo-calendar": "^14.0.6",
-    "expo-clipboard": "^7.0.1",
-    "expo-constants": "~17.0.7",
-    "expo-crypto": "^14.0.2",
-    "expo-dev-client": "^5.0.12",
-    "expo-device": "^7.0.2",
-    "expo-document-picker": "^13.0.3",
-    "expo-file-system": "^18.0.11",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-image-picker": "^16.0.6",
+    "@react-navigation/native": "^7.0.0",
+    "expo": "~52.0.17",
+    "expo-blur": "^14.0.3",
+    "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.2",
+    "expo-haptics": "^14.0.1",
     "expo-linear-gradient": "^14.0.2",
-    "expo-linking": "~7.0.5",
-    "expo-location": "^18.0.7",
-    "expo-media-library": "^17.0.6",
-    "expo-notifications": "^0.29.13",
-    "expo-router": "~4.0.17",
-    "expo-secure-store": "^14.0.1",
-    "expo-sharing": "^13.0.1",
-    "expo-splash-screen": "~0.29.22",
-    "expo-status-bar": "~2.0.1",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.15",
+    "expo-secure-store": "~14.0.0",
+    "expo-splash-screen": "~0.29.18",
+    "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.8",
-    "expo-web-browser": "~14.0.2",
+    "expo-system-ui": "~4.0.6",
+    "expo-web-browser": "~14.0.1",
     "formik": "^2.4.6",
-    "latest": "^0.2.0",
-    "native-notify": "^4.0.9",
-    "nativewind": "^4.1.23",
+    "native-notify": "^4.0.4",
+    "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-appwrite": "^0.7.0",
+    "react-native-appwrite": "^0.4.0",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -67,23 +44,14 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "yup": "^1.6.1"
+    "tailwindcss": "3.3.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
-    "metro": "^0.82.0",
-    "metro-config": "^0.82.0",
-    "metro-resolver": "^0.82.0",
-    "tailwindcss": "^3.4.17",
+    "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
-  },
-  "expo": {
-    "doctor": {
-      "reactNativeDirectoryCheck": {
-        "listUnknownPackages": false
-      }
-    }
   },
   "private": true
 }
