--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-webview": "13.12.5",
     "react-tagcloud": "^2.3.3",
     "tailwindcss": "3.3.2",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-av": "~15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
