--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
     "expo-secure-store": "~14.0.0",
+    "expo-sharing": "^13.0.1",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.2",
@@ -37,6 +38,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-appwrite": "^0.4.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
