--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.0.0",
     "date-fns": "^4.1.0",
     "expo": "~52.0.17",
+    "expo-av": "~15.0.2",
     "expo-blur": "^14.0.3",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
@@ -44,14 +45,14 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-tab-view": "^4.0.6",
     "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-tagcloud": "^2.3.3",
     "tailwindcss": "3.3.2",
-    "yup": "^1.4.0",
-    "expo-av": "~15.0.2"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
