--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native": "0.76.7",
     "react-native-appwrite": "^0.4.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-drawer-layout": "^4.1.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "^6.7.0",
     "react-native-reanimated": "~3.16.1",
