--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "formik": "^2.4.6",
     "native-notify": "^4.0.4",
     "nativewind": "^2.0.11",
+    "natural": "^8.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -55,6 +56,8 @@
     "react-native-webview": "13.12.5",
     "react-tagcloud": "^2.3.3",
     "tailwindcss": "3.3.2",
+    "wink-eng-lite-web-model": "^1.8.1",
+    "wink-nlp": "^2.3.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
