--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "expo-document-picker": "^13.0.3",
     "expo-font": "~13.0.2",
     "expo-haptics": "^14.0.1",
-    "expo-image-picker": "^16.0.6",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
