--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 EXPO_PUBLIC_GEN_AI_API_KEY="AIzaSyCw3mE41_qfuntNRbyvPzavS9u3Nl4npS0"
+EXPO_PUBLIC_GEN_AI_API_KEY_2="AIzaSyCLai4piBwyYsV6mYv4ta29Bg_7U35J4fA"
