feat: add DataAPI service with user and post fetching, and save to CSV

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "constants/images.js"
+    "constants/images.js",
+    "lib/DataAPI/*.py",
+    "lib/DataAPI/**/*.py",
+    "lib/DataAPI/**/*.json"
   ]
 }
