--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~52.0.17",
     "expo-av": "~15.0.2",
     "expo-blur": "^14.0.3",
+    "expo-calendar": "^14.0.6",
     "expo-constants": "~17.0.3",
     "expo-document-picker": "^13.0.3",
     "expo-font": "~13.0.2",
@@ -29,6 +30,7 @@
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.3",
+    "expo-notifications": "^0.29.14",
     "expo-router": "~4.0.15",
     "expo-secure-store": "~14.0.0",
     "expo-sharing": "^13.0.1",
