--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "formik": "^2.4.6",
+    "moti": "^0.30.0",
     "native-notify": "^4.0.4",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
