--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@google/generative-ai": "^0.24.0",
     "@gorhom/bottom-sheet": "^5.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.0",
     "date-fns": "^4.1.0",
@@ -35,6 +36,8 @@
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "formik": "^2.4.6",
+    "loadash": "^1.0.0",
+    "lodash.debounce": "^4.0.8",
     "native-notify": "^4.0.4",
     "nativewind": "^2.0.11",
     "natural": "^8.0.1",
@@ -43,6 +46,7 @@
     "react-native": "0.76.7",
     "react-native-appwrite": "^0.4.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-drawer-layout": "^4.1.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "^6.7.0",
     "react-native-reanimated": "~3.16.1",
@@ -52,6 +56,7 @@
     "react-native-tab-view": "^4.0.6",
     "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-tagcloud": "^2.3.3",
@@ -62,7 +67,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/lodash": "^4.17.16",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "~18.3.12",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-tagcloud": "^2.3.2",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
