--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-appwrite": "^0.4.0",
+    "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-drawer-layout": "^4.1.6",
     "react-native-gesture-handler": "~2.20.2",
