--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "formik": "^2.4.6",
+    "lodash.debounce": "^4.0.8",
     "moti": "^0.30.0",
     "native-notify": "^4.0.4",
     "nativewind": "^2.0.11",
@@ -47,6 +48,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-appwrite": "^0.4.0",
+    "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-drawer-layout": "^4.1.3",
     "react-native-gesture-handler": "~2.20.2",
@@ -67,7 +69,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "~18.3.12",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-tagcloud": "^2.3.2",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
