--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@google/generative-ai": "^0.24.0",
     "@gorhom/bottom-sheet": "^5.1.2",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.0",
     "@uploadthing/expo": "^7.2.2",
@@ -23,14 +24,15 @@
     "expo-av": "~15.0.2",
     "expo-blur": "^14.0.3",
     "expo-calendar": "^14.0.6",
-    "expo-constants": "~17.0.3",
+    "expo-constants": "~17.0.8",
+    "expo-device": "~7.0.3",
     "expo-document-picker": "^13.0.3",
     "expo-font": "~13.0.2",
     "expo-haptics": "^14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.3",
-    "expo-notifications": "^0.29.14",
+    "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.15",
     "expo-secure-store": "~14.0.0",
     "expo-sharing": "^13.0.1",
@@ -42,7 +44,7 @@
     "formik": "^2.4.6",
     "lodash.debounce": "^4.0.8",
     "moti": "^0.30.0",
-    "native-notify": "^4.0.4",
+    "native-notify": "^4.0.9",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -65,8 +67,7 @@
     "react-tagcloud": "^2.3.3",
     "tailwindcss": "3.3.2",
     "uploadthing": "^7.6.0",
-    "yup": "^1.4.0",
-    "@react-native-picker/picker": "2.9.0"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
