--- a/package.json
+++ b/package.json
@@ -12,58 +12,58 @@
     "dev": "npx expo start -c"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.1.0",
     "@google/generative-ai": "^0.24.0",
     "@gorhom/bottom-sheet": "^5.1.2",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.0",
     "@uploadthing/expo": "^7.2.2",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.17",
-    "expo-av": "~15.0.2",
-    "expo-blur": "^14.0.3",
-    "expo-calendar": "^14.0.6",
-    "expo-constants": "~17.0.8",
-    "expo-device": "~7.0.3",
-    "expo-document-picker": "^13.0.3",
-    "expo-font": "~13.0.2",
-    "expo-haptics": "^14.0.1",
-    "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-linking": "~7.0.3",
-    "expo-notifications": "~0.29.14",
-    "expo-router": "~4.0.15",
-    "expo-secure-store": "~14.0.0",
-    "expo-sharing": "^13.0.1",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo": "^53.0.7",
+    "expo-av": "~15.1.4",
+    "expo-blur": "~14.1.4",
+    "expo-calendar": "~14.1.4",
+    "expo-constants": "~17.1.5",
+    "expo-device": "~7.1.4",
+    "expo-document-picker": "~13.1.5",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-linking": "~7.1.4",
+    "expo-notifications": "~0.31.1",
+    "expo-router": "~5.0.5",
+    "expo-secure-store": "~14.2.3",
+    "expo-sharing": "~13.1.5",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.4",
+    "expo-system-ui": "~5.0.7",
+    "expo-web-browser": "~14.1.6",
     "formik": "^2.4.6",
     "lodash.debounce": "^4.0.8",
     "moti": "^0.30.0",
     "native-notify": "^4.0.9",
     "nativewind": "^2.0.11",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-appwrite": "^0.4.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-appwrite": "^0.7.3",
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-drawer-layout": "^4.1.3",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-pager-view": "^6.7.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "6.7.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.11.2",
     "react-native-tab-view": "^4.0.6",
     "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "react-tagcloud": "^2.3.3",
     "tailwindcss": "3.3.2",
     "uploadthing": "^7.6.0",
@@ -72,11 +72,11 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-tagcloud": "^2.3.2",
-    "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "react-test-renderer": "19.0.0",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
